--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Manideep</title>
-		<link rel="stylesheet" href="css/styles.css">
-		<link rel="icon" href="css/favicon.ico">
+		<link rel="stylesheet" href="CSS/styles.css">
+		<link rel="icon" href="CSS/favicon.ico">
 		<link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
 	</head>
 	<body>
